# rust-ichibanboshi

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs  coverage_100.toml  deploy.sh
.claude/skills/rust-ichibanboshi-map/: SKILL.md
.github/workflows/: cap-catalog-extract.yml  ci-shape-report.yml  ci.yml  release.yml  skills-check.yml
config/: ichibanboshi.default.toml
deploy/: ichibanboshi.service  ichibanboshi.toml
docs/: kyuyo-daijin-schema.md  plan-unchin-rate-list.md
scripts/: check_coverage_100.sh  deploy-remote.sh
src/: auth.rs  cakephp.rs  config.rs  db.rs  lib.rs  main.rs  repo.rs  server.rs  service.rs  sqlite.rs
src/kyuyo/: introspect.rs  logic.rs  mod.rs  repo.rs
src/routes/: employees.rs  health.rs  kyuyo.rs  mod.rs  sales.rs  schema.rs  surcharge.rs  unchin.rs  uriage.rs  vehicle_daily.rs
tests/: auth_test.rs  config_test.rs  employees_test.rs  endpoint_error_test.rs  kyuyo_introspect_test.rs  kyuyo_logic_test.rs  kyuyo_routes_test.rs  sales_logic_test.rs  schema_test.rs  surcharge_test.rs  unchin_test.rs  uriage_test.rs  vehicle_daily_test.rs
tests/common/: mod.rs
wix/: main.wxs
