[package]
name = "rust-ichibanboshi"
version = "0.1.0"
edition = "2021"
description = "一番星 SQL Server sales data API — Windows Service with Cloudflare Tunnel"

[[bin]]
name = "ichibanboshi"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tiberius = { version = "0.12", default-features = false, features = ["rustls"] }
bb8 = "0.8"
bb8-tiberius = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[profile.release]
opt-level = 2
lto = true
strip = true
