[package]
name = "rust-ichibanboshi"
version = "0.1.0"
edition = "2021"
description = "一番星 SQL Server sales data API — Windows Service with Cloudflare Tunnel"

[[bin]]
name = "ichibanboshi"
path = "src/main.rs"

[lib]
name = "rust_ichibanboshi"
path = "src/lib.rs"

[dependencies]
# JWT 検証ロジックの SoT (rust-alc-api #410 で leaf crate 化)。手動コピー時代の
# 検証 drift (env claim 未対応等、本 repo #4) の再発防止として git dep で追従する
alc-auth-jwt = { git = "https://github.com/ippoan/rust-alc-api", branch = "main" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tiberius = { version = "0.12", default-features = false, features = ["rustls"] }
bb8 = "0.8"
bb8-tiberius = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
# 担当者振替の備考2 パース (PHP preg_match /(.+)→(.+)/u 写経用、routes/uriage.rs)
regex = "1"
# Phase 2 担当者別売上 summary local store (sqlite.rs)。bundled で OS の libsqlite 不要
rusqlite = { version = "0.32", features = ["bundled"] }
# Phase 2 CakePHP masters / editable-months HTTP pull (社内 LAN、token 不要)
# rustls-tls で openssl 依存を回避 (musl static build を維持)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
# Phase 2 raw NDJSON.gz 出力
flate2 = "1"
# Phase 2 fingerprint (raw rows sha256 — recalc skip 判定 + R2 sync 必要性判定)
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
# CakePHP fetch を stub する HTTP mock (Phase 2 /recalc 統合テスト)
wiremock = "0.6"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage)'] }

[profile.release]
opt-level = 2
lto = true
strip = true
